src/App.css
/*

CSS GOES HERE

*/

.border {
  border-bottom: 1px solid #ccc;
  margin-bottom: 2rem;
}

.images {
  float: left;
}

.title {
  display: flex;

}

p {
  text-transform: none;
}

.padding {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.title {
  padding-top: 0rem;
  padding-left: 1rem;
  padding-bottom: 1rem;
  margin-bottom: 0.5rem;
}

.card {
  background-color: #ffffff;
  padding: 2rem;
  margin: auto;
  max-width: 960px;
  /*max-height: 720px;*/
  min-height: 20rem;
  box-shadow: 0px 0px 50px rgba(0, 0, 0, .7);
  /*padding: 100px;*/
}


ul {
    list-style: none;
    padding: 1rem;
}

.navButton {
  font-size: 18px;
  display: inline-block;
  padding: 2rem;
  color: #505050;
}

.navButton a {
  text-decoration: none;
  color: #ffffff;
}

a {
	text-decoration: none;
}

.navButton a:hover {
  color: #F84443;
}

section ul {
	text-align: center;
}

section a {
	padding: 7px;
  color: #ffffff;
}

section a:not(:first-child) {
	margin-left: 20px;
}

section i {
	vertical-align: middle;
	transition: color .3s ease-in-out;
}

section a:nth-child(1):hover i {
	color: #F84443;
}

section a:nth-child(2):hover i {
	color: #F84443;
}

section a:nth-child(3):hover i {
	color: #F84443;
}

/* Main Button Style  */

.btn {
  color: #505050;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 2rem;
  padding-right: 2rem;
  border-radius: 1px;
  background: none;
  border: 1px solid #505050;
  font-size: 12px;
}

.btn:hover {
  border: none;
  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
  color: #FFFFFF;
  background-color: #F84443;
}

.resume {
  padding-top: 5rem;
}

/* End Main Button Style */

p {
  font-size: 14px;
}

/* Responsive */



.flex-grid {
  display: flex;
}
.flex-grid .col {
  flex: 1;
}

@media (max-width: 1080px) {
  .flex-grid {
    display: block;
    .col {
      width: 100%;
      margin: 0 0 10px 0;
    }
  }
}

@media (max-width: 9000px) {
  .Mobile{
    display: none;
  }
}

@media (max-width: 375px) {
  .navButton {
    display: block;
  }

}

@media (max-width: 480px) {
  .flex-grid {
    display: block;
    .col {
      width: 100%;
      margin: 0 0 10px 0;
    }
    .p2 {
      margin: inherit;
    }
  }
  .card {
    padding: 0;
  }

  .resume {
    display: none;
  }

  .Mobile {
    display: inline;
  }

  .nonMobile {
    display: none;
  }

  .title {
    padding: inherit;
    padding-top: 1rem;
  }

  .navButton {
    display: block;
  }

}

* {
  box-sizing: border-box;
}
body {
  padding: 20px;
}
.flex-grid {
  margin: 0 0 20px 0;
}
.col {
  padding: 20px;
}

.footerBake {
  text-align: center;
  display: inline-block;
  width: 260px;
  color: #ffffff;
  text-transform: uppercase;
}

.footerBake:hover {
  color: #F84443;
}


.parent {
    display: flex;
    align-items: center;
}

.right {
       flex-grow: 1;
   }

.aboutme {
 text-align: left;
}

.img-valign {
  max-width: 100%;
  vertical-align: middle;
  margin-bottom: 0.75em;
}
















/* STRUCTURE */
.wrapper {
  text-align: left;
  padding: 5px;
  max-width: 960px;
  width: 95%;
  margin: 20px auto;
}

header {
  padding: 0 15px;
}

.columns {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  margin: 5px 0;
}

.column {
  flex: 1;
  margin: 2px;
  padding: 10px;
}
.column:first-child {
  margin-left: 0;
}
.column:last-child {
  margin-right: 0;
}

footer {
  padding: 0 15px;
}

@media screen and (max-width: 980px) {
  .columns .column {
    margin-bottom: 5px;
    flex-basis: 40%;
  }
  .columns .column:nth-last-child(2) {
    margin-right: 0;
  }
  .columns .column:last-child {
    flex-basis: 100%;
    margin: 0;
  }
}
@media screen and (max-width: 680px) {
  .columns .column {
    flex-basis: 100%;
    margin: 0 0 5px 0;
  }
}

p span
{
    display: block;
}

.ital {
  font-style: italic;
}

h6 {
  font-size: 10px;
}

.story {
  width: 200px;
  text-align: left;;
}

.stor {
  padding-right: 100px;
}

.legal {
  text-align: left;
}


.main {
  margin-bottom: 10px;
}

.main,
.side {
  text-align: left;
  padding: 1rem;
}

@media ( min-width : 720px ){
	.flexbox {
    display: -webkit-flex;
    display: flex;
    flex-wrap: wrap;
	}
  .main {
    margin: 0 10px 0 0;
  }
}

